# ChangeLog for net-analyzer/xprobe
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/xprobe/ChangeLog,v 1.15 2005/07/19 16:43:40 dholm Exp $

  19 Jul 2005; David Holm <dholm@gentoo.org> xprobe-0.2.2.ebuild:
  Added to ~ppc.

  14 May 2005; Marcelo Goes <vanquirius@gentoo.org>
  -files/xprobe-0.0.2-gentoo.patch, xprobe-0.2.2.ebuild:
  Marked x86 stable, removed old patch.

  29 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> -xprobe-0.0.2.ebuild,
  xprobe-0.2.2.ebuild:
  Ebuild cleanup, remove old ebuild.

  30 Mar 2005; Aaron Walker <ka0ttic@gentoo.org> xprobe-0.0.2.ebuild,
  xprobe-0.2.1.ebuild, xprobe-0.2.2.ebuild:
  Update HOMEPAGE for bug 87201.

  17 Feb 2005; Radoslaw Stachowiak <radek@gentoo.org> xprobe-0.2.2.ebuild:
  version bump. also end of CHOST CFLAGS problems.

  31 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> xprobe-0.2.1.ebuild:
  Marked stable on x86.

  29 Jan 2005; Daniel Black <dragonheart@gentoo.org> xprobe-0.0.2.ebuild,
  xprobe-0.2.1.ebuild:
  changed net-libs/libpcap depend to virtual/libcap

*xprobe-0.2.1 (01 Jan 2005)

  01 Jan 2005; Jason Wever <weeve@gentoo.org> xprobe-0.2.1.ebuild:
  Added ~sparc keyword as it went missing in the version bump.

  27 Dec 2004; Radoslaw Stachowiak <radek@gentoo.org> :
  New version of xprobe xprobe, so called xprobe2, due to xprobe1 being
  obsoleted. xprobe 2 has different approach to operating system
  fingerprinting. Xprobe2 rely on fuzzy signature matching, probabilistic
  guesses, multiple matches simultaneously, and a signature database.

  10 Jul 2004; Eldad Zack <eldad@gentoo.org> +metadata.xml,
  xprobe-0.0.2.ebuild:
  Tidy up.

  12 Jun 2003; <msterret@gentoo.org> xprobe-0.0.2.ebuild:
  fix Header

*xprobe-0.0.2 (17 Aug 2002)

  17 Mar 2003; Jason Wever <weeve@gentoo.org> xprobe-0.0.2.ebuild:
  Added ~sparc to keywords

  17 Aug 2002; Daniel Ahlberg <aliz@gentoo.org> xprobe-0.0.2.ebuild: