@@ -1,6 +1,8 @@
-MD5 124e7f1a6e0e0e1cf76c80ca97b8ce8f ChangeLog 2031
-MD5 ac6c11d70b477833baa876a5460fba26 metadata.xml 224
-MD5 e7a1806a51548c183bbf6edbf8dbd28e xprobe-0.2.1.ebuild 1121
 MD5 3d05361cc3f80f560c7ea44412d85f04 xprobe-0.2.2.ebuild 917
+MD5 e7a1806a51548c183bbf6edbf8dbd28e xprobe-0.2.1.ebuild 1121
+MD5 5ed340163fa31546bbf5f7457e89c7d9 xprobe-0.3.ebuild 641
+MD5 124e7f1a6e0e0e1cf76c80ca97b8ce8f ChangeLog 2031
+MD5 38db7df6633dc3f15d81ba139207693b metadata.xml 478
+MD5 333d965a82d82d7505e765d8a4418ee9 files/digest-xprobe-0.3 63
 MD5 6b20f3d65e14741fe524b8b88dbdbd73 files/digest-xprobe-0.2.1 65
 MD5 deeacb60b94a028e0f05b2c33f504488 files/digest-xprobe-0.2.2 65
