@@ -2,5 +2,9 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>netmon</herd>
-<longdescription>Active OS fingerprinting tool</longdescription>
+<longdescription>Active OS fingerprinting tool. This is the new xprobe, called
+xprobe2, due to xprobe1 being obsoleted. xprobe2 has a different approach to
+OS fingerprinting. xprobe2 relies on fuzzy signature matching, probabilistic
+guesses, multiple matches simultaneously, and a signature
+database.</longdescription>
 </pkgmetadata>
